some edit for my needs

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+### local edit version
+This is forked from https://github.com/vim-scripts/PDV--phpDocumentor-for-Vim and modified some logic for my needs :-)
+
+
+
+
 This is a mirror of http://www.vim.org/scripts/script.php?script_id=1355
 
 PDV (phpDocumentor for Vim)
